# learn-haskell

./: .ghcid  .gitignore  LICENSE  README.md  learn-haskell.cabal
json/: Main.hs
scheme/: Main.hs
src/: Json.hs  Scheme.hs
src/Phrasebook/: CommonTypes.hs  HelloWorld.hs  Variables.hs
